fix better positioning and stacking of logos when in high and uneven amounts using flexbox

--- a/src/moore/static/sass/partials/blocks/_logos.scss
+++ b/src/moore/static/sass/partials/blocks/_logos.scss
@@ -3,8 +3,15 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
   padding: 60px 60px;
   white-space: nowrap;
-
+  .logo-container {
+    display: flex;
+    flex-wrap: wrap;
+    @media #{$small-and-down} {
+      flex-direction: column;
+    }
+  }
   .logo{
+    flex: 1 0 33%;
     text-align: center;
     vertical-align: middle;
     margin: 12.5px 0;
